--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -1,41 +1,60 @@
-body{
-  background-color: rgb(200, 227, 236);
+body {
+  background-color: rgb(218, 210, 210);
   margin: 0px;
 }
 
-.wrapper{
+input[type="text"], input[type="password"],input[type="button"] {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+}
+
+.wrapper {
   margin-top: 5px;
-  header{
+  header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     // background-color: rgb(150, 215, 231);
-    #logo{
-      width: 60px;
+    #logo {
+      width: 200px;
       margin-left: 10%;
     }
-    .question{
+    .question {
       display: flex;
       align-items: center;
       justify-content: flex-end;
-      margin-right: 8%;
-      p{
+      margin-right: 13%;
+      p {
         margin-right: 5px;
+      }
+      a {
+        text-decoration: none;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+        font-weight: 500;
+      }
+      a:hover {
+        text-decoration: none;
+        color: #cf0000;
+        border-bottom-color: rgba(208, 64, 0, 0.2);
       }
     }
   }
-  .div-index{
+  .div-index {
     display: flex;
     justify-content: center;
-    .form-index{
+    .form-index {
       display: flex;
       justify-content: center;
-      margin-top: 90px;
-      width: 70%;
-      background-color: rgb(123, 231, 235);
+      margin-top: 120px;
+      width: 40%;
+      background-color: rgb(255, 255, 255);
       border-radius: 5px;
-      .nav-index{
-        h1{
+      .nav-index {
+        h1 {
           font-size: 28px;
           color: rgb(49, 39, 92);
         }
@@ -44,48 +63,67 @@ body{
         justify-content: center;
         width: 70%;
         margin: 7% 20% 10% 20%;
-        .input-index{
+        .input-index {
           display: flex;
           flex-direction: column;
-          input{
+          input {
             margin-bottom: 20px;
-            border: 0;
-            box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+            border-radius: 5px;
+            border: 3px solid rgb(167, 161, 161);
             height: 35px;
-            font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-            font-size: 18px;
+            font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+              sans-serif;
+            font-size: 18px;            
           }
-          .fnln{
+          input:hover{
+            box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+          }
+          input:focus{
+            border-left-color: blue;
+            border-width: 3px;
+          }
+          .fnln {
             display: flex;
             justify-content: space-between;
-            #firstname{
+            #firstname {
               margin-right: 10px;
             }
           }
         }
-        .button{
+        .button {
           display: flex;
           align-items: flex-end;
           flex-direction: column;
-          a{
+          a {
             margin-bottom: 10px;
           }
-          .sign-in{
+          .sign-in {
             border: 0;
-            box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
             height: 35px;
             width: 175px;
-            font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+            font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+              sans-serif;
             font-size: 18px;
           }
+          .sign-in:hover{
+            box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+          }
         }
-        .agree1, .agree2{
+        .agree1,
+        .agree2 {
           margin-bottom: 8px;
         }
       }
     }
   }
 }
-
-
-
+.link-form {
+  text-decoration: none;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-weight: 500;
+}
+.link-form:hover{
+  text-decoration: none;
+  color: #cf0000;
+  border-bottom-color: rgba(208, 64, 0, 0.2);
+}
